fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,6 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
